# WannyCry-MMHCS

./: README.md
.devin/: config.json
core/: __init__.py  config_manager.py  fp_reducer.py  report_generator.py
data/: whitelist.json
docs/: architecture.md  bao-cao-00-frontmatter.md  bao-cao-chuong1-3.md  bao-cao-chuong4-6.md  bao-cao-chuong7-11.docx  bao-cao-phan1-tu-viet-tat.md
gui/: scan_tab.py
tests/: __init__.py  (+3 more)
wannacry-detector-lite/: LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  train_model.py
wannacry-detector-lite/core/: config_manager.py  logger_setup.py  ml_engine.py  pe_analyzer.py  report_generator.py  scanner.py  yara_engine.py
wannacry-detector-lite/data/: config.json
wannacry-detector-lite/datasets/: wannacry_lite.csv
wannacry-detector-lite/docs/: bao-cao-00-frontmatter.docx  bao-cao-chuong1-3.docx  bao-cao-chuong12-14.docx  bao-cao-chuong12-14.md  bao-cao-chuong4-6.md  bao-cao-chuong7-11.md  bao-cao-phan2-muc-luc.md  wannacry_iocs.md
wannacry-detector-lite/gui/: app.py  dashboard_tab.py  logs_tab.py  scan_tab.py
wannacry-detector-lite/models/: wannacry_rf.pkl
wannacry-detector-lite/reports/: wannacry_scan_20260430_170905.csv  wannacry_scan_20260430_170905.json  wannacry_scan_20260430_171716.csv  wannacry_scan_20260430_171816.csv
wannacry-detector-lite/rules/: wannacry.yar
wannacry-detector-lite/scripts/: build_wannacry_dataset.py
wannacry-detector-lite/tests/: conftest.py  test_blackcat_detection.py  test_config_manager.py  test_feature_extractor.py  test_fp_reducer.py  test_logger_setup.py  test_ml_engine.py  test_pe_analyzer.py  test_pe_analyzer_uncovered.py  test_scanner.py  test_scanner_extended.py  test_wannacry_detection.py
(+14 files in other folders)
